fix ocd font alignment issue on mobile

--- a/css/scss/_main.scss
+++ b/css/scss/_main.scss
@@ -17,5 +17,4 @@ body {
 	max-width: 670px;
 	text-align: center;
 	padding: 0 $spacing;
-	letter-spacing: 1px;
 }
