--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,7 @@ body {
   margin: 50px auto;
   max-width: 670px;
   text-align: center;
-  padding: 0 24px;
-  letter-spacing: 1px; }
+  padding: 0 24px; }
 
 /* Generated by Font Squirrel (http://www.fontsquirrel.com) on December 6, 2012 06:51:06 PM America/New_York */
 @font-face {
@@ -79,6 +78,9 @@ h1 {
 
 p, ul, h1 {
   margin-bottom: 24px; }
+
+p {
+  letter-spacing: 1px; }
 
 b, time {
   font-weight: bold; }
